--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@fortawesome/fontawesome-free": "^5.12.0",
     "bulma": "^0.8.0",
     "rxjs": "~6.4.0",
+    "sweetalert2": "^9.7.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
