--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.2.14",
     "@fortawesome/fontawesome-free": "^5.12.0",
     "bulma": "^0.8.0",
+    "ngx-pagination": "^5.0.0",
     "rxjs": "~6.4.0",
     "sweetalert2": "^9.7.0",
     "tslib": "^1.10.0",
