--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@fortawesome/fontawesome-free": "^5.12.0",
+    "alife-file-to-base64": "0.0.4",
     "bulma": "^0.8.0",
     "ngx-pagination": "^5.0.0",
     "rxjs": "~6.4.0",
