--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@fortawesome/fontawesome-free": "^5.12.0",
     "alife-file-to-base64": "0.0.4",
     "bulma": "^0.8.0",
+    "file-saver": "^2.0.2",
     "ngx-pagination": "^5.0.0",
     "rxjs": "~6.4.0",
     "sweetalert2": "^9.7.0",
     "tslib": "^1.10.0",
+    "xlsx": "^0.15.5",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
