--- a/angular.json
+++ b/angular.json
@@ -26,9 +26,14 @@
             "styles": [
               "node_modules/bulma/css/bulma.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.css",
+              "node_modules/materialize-css/dist/css/materialize.min.css",
+              "node_modules/@mdi/font/css/materialdesignicons.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/materialize-css/dist/js/materialize.min.js"
+            ]
           },
           "configurations": {
             "production": {
