--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@fortawesome/fontawesome-free": "^5.12.0",
+    "@mdi/font": "^5.3.45",
     "alife-file-to-base64": "0.0.4",
     "bulma": "^0.8.0",
     "file-saver": "^2.0.2",
+    "jquery": "^3.5.1",
+    "materialize-css": "^1.0.0-rc.2",
     "ngx-pagination": "^5.0.0",
     "rxjs": "~6.4.0",
     "sweetalert2": "^9.7.0",
