--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,7 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           KEY: ${{ secrets.SSHKEY }}
+          port: ${{ secrets.PORT }}
           script: |
             cd ${{ secrets.PATH_WEB_DEV }}
             git pull origin development
